# Millenium-Neural-Net

./: .gitignore  CMakeLists.txt
include/: FNN_Model.hpp  MNIST_Parser.hpp  Neural_Net.hpp  chart.hpp  chart.hpp.bak  gnuplot_i.hpp
lib/cmake/eigen3/: Eigen3Config.cmake
src/: FNN_Model.cpp  MNIST_Parser.cpp  Neural_Net.cpp  chart.cpp  chart.cpp.back  gnuplot_i.cpp  main.cpp
